--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -19,7 +19,7 @@
 	<form name='browseForm' action="Start" method="POST" onsubmit="return validate();">
 		<table>
 			<tr>
-				<td><input type='text'></input></td><td><input type='button' name='Search' value='Search'></input></td>
+				<td><input type='text'></input></td><td><input type='submit' name='Search' value='Search'></input></td>
 			</tr>
 			<tr>
 				<td><p name='results'></p></td>
