--- a/WebContent/LoginPage.jspx
+++ b/WebContent/LoginPage.jspx
@@ -1,16 +1,134 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
-	<jsp:directive.page contentType="text/html; charset=UTF-8" 
-		pageEncoding="UTF-8" session="false"/>
+	<jsp:directive.page contentType="text/html; charset=UTF-8"
+		pageEncoding="UTF-8" session="false" />
 	<jsp:output doctype-root-element="html"
 		doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
 		doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
 		omit-xml-declaration="true" />
-<html xmlns="http://www.w3.org/1999/xhtml">
+	<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Insert title here</title>
+<link rel="StyleSheet" href="res/test.html" type="text/css" title="cse4413"
+	media="screen, print" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Poppins"/>
+<title>Login Page</title>
+
+			
 </head>
 <body>
+
+	<form action='' method="GET">
+	<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
+		style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar">
+		<br/> <a href="javascript:void(0)" onclick="w3_close()"
+			class="w3-button w3-hide-large w3-display-topleft"
+			style="width: 100%; font-size: 22px">Close Menu</a>
+		<div class="w3-container">
+			<h3 class="w3-padding-64">
+				
+			</h3>
+		</div>
+		<div class="w3-bar-block">
+			<a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+			<a href="LINK CATEGORY HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
+			<a href="LINK CART HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
+			<a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a>
+			<a href="LINK ACCOUNT PAGE HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a>
+			<a href="#membership" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
+			<a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+		</div>
+	</nav>
+		<table>
+		
+		<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
+
+		<!-- Header -->
+		<div class="w3-container" style="margin-top: 80px; color:Red;" id="showcase">
+			<h1 class="w3-jumbo" style="display:inline">
+				<b>Swag EECS Bookstore</b>
+			</h1>
+		</div>
+		<form name='browseForm' action="Start" method="POST" onsubmit="return validate();">
+			<table style="width: 100%">
+				<tr align="right">
+					<td><input type='text' name='browse'
+						placeholder='Browse Books'></input><input type='submit'
+						name='Search' value='Search'></input></td>
+				</tr>
+				<tr>
+					<td><p name='results'></p></td>
+				</tr>
+			</table>
+		</form>
+</div>
+<div class="w3-container" id="Login" style="margin-left: 50px"  float="left">
+			<h1 class="w3-xxxlarge w3-text-blue" align="left" display="inline">
+				<b>Login </b>
+			</h1>
+			<hr style="width: 50px; border: 5px solid red" class="w3-round">
+			</hr>
+			
+</div>
+
+			
+		<div class="w3-container" id="SignIn" style="margin-right: 200px">
+			<h3 class="w3-medium w3-text-black" style="font-size: 100px" >
+			
+				<b>Access your $wag account, write reviews, track orders and more</b>
+			</h3>
+			
+			<tr>
+				<td><label for="loginName" style="margin-right: 100px"
+				class="w3-medium w3-text-red" >Email address: </label> <input
+					name="loginName" id="loginName" type="text" value=""
+					placeholder="Enter your email ID"> </input></td>
+			</tr>
+			
+			
+			<tr>
+				<td><br><label for="password" style="margin-right: 130px"
+				class="w3-medium w3-text-red">Password : </label> <input 
+					name="password" id="password" type="text" value=""
+					placeholder="Enter your password"></input></br></td>
+			</tr>
+			
+			<tr>
+				<td><button action='Submit' name='signIn' label='signIn' 
+				class="w3-medium w3-text-black" >Sign
+						In</button></td>
+			</tr>
+			
+			<tr>
+				<td><br><button action='Submit' name='forgotPassword'
+						label='forgotPassword' style="margin-right: 250px"
+				class="w3-medium w3-text-black">Forgot your password?</button></br></td>
+			</tr>
+			
+</div>
+<div class="w3-container" id="Sign up" style="margin-left: 50px" display="inline" float="left">
+			<h2 class="w3-xxxlarge w3-text-blue" align="left" >
+				<b>Sign Up </b> 
+			</h2>
+
+			<tr>
+				<td><label for="create">Create a new $wag Account </label></td>
+			</tr>
+			</div>
+			
+			
+
+
+			
+
+			
+
+			
+
+		</table>
+	</form>
+
 </body>
-</html>
+	</html>
 </jsp:root>
