--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -40,20 +40,13 @@
 							<h3 class="w3-padding-64"></h3>
 						</div>
 						<div class="w3-bar-block">
-							<a href="#" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Home</a> <a
-								href="LINK CATEGORY HERE" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
-								href="LINK CART HERE" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Cart</a> <a
-								href="#designers" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a
-								href="LINK ACCOUNT PAGE HERE" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Account
-								Management</a> <a href="#membership" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Membership</a> <a
-								href="#contact" onclick="w3_close()"
-								class="w3-bar-item w3-button w3-hover-white">Contact</a>
+							<a href="index.html#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+							<a href="LINK CATEGORY HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
+							<a href="LINK CART HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
+							<a href="index.html#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
+							<a href="LINK ACCOUNT PAGE HERE" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
+							<a href="index.html#membership" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
+							<a href="index.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
 						</div>
 					</nav>
 				</td>
