--- a/WebContent/LoginPage.jspx
+++ b/WebContent/LoginPage.jspx
@@ -13,12 +13,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/css?family=Poppins" />
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <title>Login Page</title>
 
 
 </head>
-<body>
-
+<body background="Images/Books.jpg">
 	<form action='' method="GET">
 		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
 			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar">
@@ -56,91 +57,164 @@
 						<b>Swag EECS Bookstore</b>
 					</h1>
 				</div>
+
 				<form name='browseForm' action="Start" method="POST"
 					onsubmit="return validate();">
 					<table style="width: 100%">
+						<!-- 						<tr align="right"> -->
+						<!-- 							<td><input type='text' name='browse' -->
+						<!-- 								placeholder='Browse Books'></input><input type='submit' -->
+						<!-- 								name='Search' value='Search'></input></td> -->
+						<!-- 						</tr> -->
 						<tr align="right">
-							<td><input type='text' name='browse'
-								placeholder='Browse Books'></input><input type='submit'
-								name='Search' value='Search'></input></td>
+							<td><input type='text' style="margin-right: 10px"
+								name='browse' placeholder='Browse Books'></input>
+								<button action='Submit' name='createAccount'
+									label='createAccount' style="margin-top: 30px"
+									class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
+									<font color="#701e6e"></font> Search
+								</button></td>
 						</tr>
+
 						<tr>
 							<td><p name='results'></p></td>
 						</tr>
 					</table>
 				</form>
 			</div>
-			<div class="w3-container" id="Login" style="margin-left: 50px"
-				float="left">
-				<h1 class="w3-xxxlarge w3-text-blue" align="left" display="inline">
-					<b>Login </b>
-				</h1>
-				<hr style="width: 50px; border: 5px solid red" class="w3-round">
-				</hr>
 
+			<div class="w3-main" style="margin-left: 340px; margin-right: 100px">
+				<div class="w3-container" style="color: #FF0000; margin-top: 80px;"
+					id="showcase">
+					<h1 class="w3-xxxlarge w3-text-blue"
+						style="display: inline; margin-right: 100px">
+						<font color="#313551"><b>LOG IN</b></font>
+					</h1>
+				</div>
 			</div>
 
+			<div class="w3-main" style="margin-left: 300px; margin-right: 100px">
+				<div class="w3-container" style="margin-top: 0px; color: Red;"
+					id="showcase">
+					<h1 class="w3-container">
+						<font size="6" color="#750a30"><b>Access your account
+								by entering your credentials</b></font>
+					</h1>
 
-			<div class="w3-container" id="SignIn" style="margin-right: 200px">
-				<h3 class="w3-medium w3-text-black" style="font-size: 100px">
+					<tr>
+						<td><label for="loginName" style="margin-right: 100px"
+							class="w3-medium w3-text-red"><br>
+							<font size="4" color="#e8e0d9"><b>Email address: </b></font></br></label> <input
+							name="loginName" id="loginName" type="text" value=""
+							placeholder="Enter your email ID"> </input></td>
+					</tr>
 
-					<b>Access your $wag account, write reviews, track orders and
-						more</b>
-				</h3>
-
-				<tr>
-					<td><label for="loginName" style="margin-right: 100px"
-						class="w3-medium w3-text-red">Email address: </label> <input
-						name="loginName" id="loginName" type="text" value=""
-						placeholder="Enter your email ID"> </input></td>
-				</tr>
+					<tr>
+						<td><br>
+						<label for="password" style="margin-right: 130px"
+							class="w3-medium w3-text-red"><br>
+							<font size="4" color="#e8e0d9"><b>Password : </b></font></br></label> <input
+							name="password" id="password" type="text" value=""
+							placeholder="Enter your password"></input></br></td>
+					</tr>
 
 
-				<tr>
-					<td><br>
-					<label for="password" style="margin-right: 130px"
-						class="w3-medium w3-text-red">Password : </label> <input
-						name="password" id="password" type="text" value=""
-						placeholder="Enter your password"></input></br></td>
-				</tr>
+					<tr>
+						<td><br>
+						<button action='Submit' name='signIn' label='signIn'
+								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
+								<font color="#701e6e"></font>Sign In
+							</button> </br></td>
+					</tr>
 
-				<tr>
-					<td><button action='Submit' name='signIn' label='signIn'
-							class="w3-medium w3-text-black">Sign In</button></td>
-				</tr>
-
-				<tr>
-					<td><br>
-					<button action='Submit' name='forgotPassword'
-							label='forgotPassword' style="margin-right: 250px"
-							class="w3-medium w3-text-black">Forgot your password?</button>
-						</br></td>
-				</tr>
-
-			</div>
-			<div class="w3-container" id="Sign up" style="margin-left: 50px"
-				display="inline" float="left">
-				<h2 class="w3-xxxlarge w3-text-blue" align="left">
-					<b>Sign Up </b>
-				</h2>
-
-				<tr>
-					<td><label for="create">Create a new $wag Account </label></td>
-				</tr>
+					<tr>
+						<td><br>
+						<button action='Submit' name='forgotPassword'
+								label='forgotPassword' style="margin-top: 10px"
+								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
+								<font color="#701e6e"> Forgot your password?</font>
+							</button> </br></td>
+					</tr>
+				</div>
 			</div>
 
+			<div class="w3-main" style="margin-left: 340px; margin-right: 100px">
+				<div class="w3-container" style="margin-top: 80px; color: Red;"
+					id="showcase">
+					<h1 class="w3-xxxlarge w3-text-blue"
+						style="display: inline; margin-right: 10px; color: Red">
+						<font size="10" color="#313551"><b>SIGN UP</b></font>
 
+					</h1>
+				</div>
+			</div>
+			<div class="w3-main" style="margin-left: 300px; margin-right: 100px">
 
+				<div class="w3-container" style="margin-top: 0px; color: Red;"
+					id="showcase">
+					<h1 class="w3-container">
+						<font size="6" color="#750a30"><b>Not a member yet?
+								Sign up now!</b></font>
+					</h1>
+					<!-- Get the first name, last name, email address, address, phone -->
+					<tr>
+						<td><label for="loginFirstName"
+							style="display: inline; margin-right: 5000px"
+							class="w3-medium w3-text-red"><font size="4"
+								color="#e8e0d9"><b>Your first name </b></font></label> <input
+							name="loginFirstName" id="loginFirstName" type="text" value=""
+							placeholder="Eg: Jane"> </input></td>
+					</tr>
 
+					<tr>
+						<td><label for="loginLastName" style="margin-right: 5000px"
+							class="w3-medium w3-text-red"><font size="4"
+								color="#e8e0d9"><br>
+								<b>Your last name</b></br></font></label> <input name="loginLastName"
+							id="loginLastName" type="text" value="" placeholder="Eg: Doe">
+						</input></td>
+					</tr>
 
+					<tr>
+						<td><label for="userPassword" style="margin-right: 5000px"
+							class="w3-medium w3-text-red"><font size="4"
+								color="#e8e0d9"><b>Password</b></font></label> <input
+							name="userPassword" id="userPassword" type="text" value="">
+						</input></td>
+					</tr>
 
+					<tr>
+						<td><br>
+						<button action='Submit' name='createAccount' label='createAccount'
+								style="margin-top: 30px"
+								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
+								<font color="#701e6e"></font> Create your account
+							</button> </br></td>
+					</tr>
 
-
-
-
+				</div>
+			</div>
 		</table>
 	</form>
 
+	<footer>
+		<table>
+			<div class="w3-container"
+				style="margin-top: 100px; margin-right: 1000px; color: red;"
+				id="showcase">
+				<h1 class="w3-small" style="display: inline">
+					<p>
+						Swag Webiste <a
+							href="
+  						http://localhost:8080/(Project-Bookstore)/LoginPage.jspx"></a>
+					</p>
+				</h1>
+			</div>
+
+		</table>
+	</footer>
+
 </body>
+
 	</html>
 </jsp:root>
