--- a/WebContent/LoginPage.jspx
+++ b/WebContent/LoginPage.jspx
@@ -19,7 +19,7 @@
 
 
 </head>
-<body background="Images/Books.jpg">
+<body background="res/Images/Books.jpg">
 	<form action='' method="GET">
 		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
 			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar">
