--- a/WebContent/Admin.jspx
+++ b/WebContent/Admin.jspx
@@ -16,95 +16,77 @@
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <title>Analytics Page for Admin users</title>
-<script type="text/javascript" src="${pageContext.request.contextPath}/res/browse.js">
+<script type="text/javascript"
+	src="${pageContext.request.contextPath }/res/browse.js">
 	;
 </script>
+<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 <style>
-/* Popup container - can be anything you want */
-.popup {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	padding-top: 100px; /* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0, 0, 0); /* Fallback color */
+	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-/* The actual popup */
-.popup .popuptext {
-  visibility: hidden;
-  width: 160px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
+/* Modal Content */
+.modal-content {
+	background-color: #fefefe;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
 }
 
-/* Popup arrow */
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
+/* The Close Button */
+.close {
+	color: #aaaaaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
 }
 
-/* Toggle this class - hide and show the popup */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;} 
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
+.close:hover, .close:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
 }
 </style>
 </head>
 <body background="res/Images/Books.jpg">
 	<form action='' method="GET">
-<!-- 		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" -->
-<!-- 			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar"> -->
-<!-- 			<br /> <a href="javascript:void(0)" onclick="w3_close()" -->
-<!-- 				class="w3-button w3-hide-large w3-display-topleft" -->
-<!-- 				style="width: 100%; font-size: 22px">Close Menu</a> -->
-<!-- 			<div class="w3-container"> -->
-<!-- 				<h3 class="w3-padding-64"></h3> -->
-<!-- 			</div> -->
-<!-- 			<div class="w3-bar-block"> -->
-<!-- 				<a href="#" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Home</a> <a -->
-<!-- 					href="LINK CATEGORY HERE" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Categories</a> <a -->
-<!-- 					href="LINK CART HERE" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Cart</a> <a -->
-<!-- 					href="#designers" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a -->
-<!-- 					href="LINK ACCOUNT PAGE HERE" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Account Management</a> -->
-<!-- 				<a href="#membership" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Membership</a> <a -->
-<!-- 					href="#contact" onclick="w3_close()" -->
-<!-- 					class="w3-bar-item w3-button w3-hover-white">Contact</a> -->
-<!-- 			</div> -->
-<!-- 		</nav> -->
+		<!-- 		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" -->
+		<!-- 			style="z-index: 3; width: 300px; font-weight: bold;" id="mySidebar"> -->
+		<!-- 			<br /> <a href="javascript:void(0)" onclick="w3_close()" -->
+		<!-- 				class="w3-button w3-hide-large w3-display-topleft" -->
+		<!-- 				style="width: 100%; font-size: 22px">Close Menu</a> -->
+		<!-- 			<div class="w3-container"> -->
+		<!-- 				<h3 class="w3-padding-64"></h3> -->
+		<!-- 			</div> -->
+		<!-- 			<div class="w3-bar-block"> -->
+		<!-- 				<a href="#" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Home</a> <a -->
+		<!-- 					href="LINK CATEGORY HERE" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Categories</a> <a -->
+		<!-- 					href="LINK CART HERE" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Cart</a> <a -->
+		<!-- 					href="#designers" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a -->
+		<!-- 					href="LINK ACCOUNT PAGE HERE" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Account Management</a> -->
+		<!-- 				<a href="#membership" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Membership</a> <a -->
+		<!-- 					href="#contact" onclick="w3_close()" -->
+		<!-- 					class="w3-bar-item w3-button w3-hover-white">Contact</a> -->
+		<!-- 			</div> -->
+		<!-- 		</nav> -->
 		<table>
 
 			<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
@@ -125,54 +107,94 @@
 						<!-- 								placeholder='Browse Books'></input><input type='submit' -->
 						<!-- 								name='Search' value='Search'></input></td> -->
 						<!-- 						</tr> -->
-           <!--  Books sold each month.  We were talking about having a start and end date and the search by zip.  -->
+						<!--  Books sold each month.  We were talking about having a start and end date and the search by zip.  -->
 						<tr align="right">
 							<td><input type='text' style="margin-right: 10px"
 								name='adminBrowse' placeholder='Admin Search'></input>
-								<button action='Submit' name='adminSearch'
-									label='adminSearch' style="margin-top: 30px"
+								<button action='Submit' name='adminSearch' label='adminSearch'
+									style="margin-top: 30px"
 									class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
 									<font color="#701e6e"></font> Admin Search
 								</button></td>
 						</tr>
-				</table>
+					</table>
 				</form>
 			</div>
-		
-		
-			
-<!-- 			<button action='Submit' name="JanReport" label='JanReport' id="janReport" style="margin-top: 30px" -->
-<!-- 									class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">Test</button> -->
-			<table>
-			<tr>
-			<td>
-			<button class="popup" onclick="analyticsPopUpFunction()">January
-  			<span class="popuptext" id="janReport">January report</span></button>
 
-		</td>
-		</tr>
-		</table>
-								
-			
 
-	<footer>
-		<table>
-			<div class="w3-container"
-				style="margin-top: 100px; margin-right: 1000px; color: red;"
-				id="showcase">
-				<h1 class="w3-small" style="display: inline">
-					<p>
-						Swag Webiste <a
-							href="
-  						http://localhost:8080/(Project-Bookstore)/LoginPage.jspx"></a>
-					</p>
-				</h1>
+			<!-- Trigger/Open The Modal -->
+			<div>
+				<button id="janBtn">January Report</button>
+
+				<!-- The Modal -->
+				<div id="jan" class="modal">
+
+					<!-- Modal content -->
+					<div class="modal-content">
+						<span class="close">
+							<table>
+							</table>
+
+						</span>
+					</div>
+
+				</div>
 			</div>
 
+			<script>
+				// Get the modal
+				var modal = document.getElementById('jan');
+
+				// Get the button that opens the modal
+				var btn = document.getElementById("janBtn");
+
+				// Get the span element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				// When the user clicks the button, open the modal 
+				btn.onclick = function() {
+					modal.style.display = "block";
+				}
+
+				// When the user clicks on span (x), close the modal
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+					if (event.target == modal) {
+						modal.style.display = "none";
+					}
+				}
+			</script>
+
+
+
+
+
 		</table>
-	</footer>
-</table>
-</form>
+
+
+
+		<footer>
+			<table>
+				<div class="w3-container"
+					style="margin-top: 100px; margin-right: 1000px; color: red;"
+					id="showcase">
+					<h1 class="w3-small" style="display: inline">
+						<p>
+							Swag Webiste <a
+								href="
+  						http://localhost:8080/(Project-Bookstore)/LoginPage.jspx"></a>
+						</p>
+					</h1>
+				</div>
+
+			</table>
+		</footer>
+		
+	</form>
 </body>
 
 	</html>
