--- a/WebContent/ShoppingCart.jspx
+++ b/WebContent/ShoppingCart.jspx
@@ -61,11 +61,7 @@
 				<form name='browseForm' action="Start" method="POST"
 					onsubmit="return validate();">
 					<table style="width: 100%">
-						<!-- 						<tr align="right"> -->
-						<!-- 							<td><input type='text' name='browse' -->
-						<!-- 								placeholder='Browse Books'></input><input type='submit' -->
-						<!-- 								name='Search' value='Search'></input></td> -->
-						<!-- 						</tr> -->
+
 						<tr align="right">
 							<td><input type='text' style="margin-right: 10px"
 								name='browse' placeholder='Browse Books'></input>
@@ -83,9 +79,9 @@
 				</form>
 			</div>
 
-			<div class="w3-light-grey" style="margin-left: 340px; margin-right: 100px">
-				<div class="w3-container" style="color: #FF0000; margin-top: 80px;"
-					id="showcase">
+			<div class="w3-light-grey"
+				style="margin-left: 320px; margin-right: 90px">
+				<div class="w3-container" style="color: #FF0000;" id="showcase">
 					<h1 class="w3-xxxlarge w3-text-blue"
 						style="display: inline; margin-right: 100px">
 						<font color="#313551"><b>Shopping Cart (${sSize})</b></font>
@@ -97,103 +93,70 @@
 			<div class="w3-main" style="margin-left: 300px; margin-right: 100px">
 				<div class="w3-container" style="margin-top: 0px; color: Red;"
 					id="showcase">
+
 					<h1 class="w3-container">
-						<font size="6" color="#750a30"><b>You don't have anything in your Shopping Cart</b></font>
+						<font size="5" color="#750a30"><b>You don't have
+								anything in your Shopping Cart</b></font>
 					</h1>
+					<td>
+						<button action='Submit' name='home' label='home'
+							class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
+							<font color="#701e6e"></font>Go Back to HomePage
+						</button>
 
-					<tr>
-						<td><label for="loginName" style="margin-right: 100px"
-							class="w3-medium w3-text-red"><br>
-							<font size="4" color="#e8e0d9"><b>Email address: </b></font></br></label> <input
-							name="loginName" id="loginName" type="text" value=""
-							placeholder="Enter your email ID"> </input></td>
-					</tr>
+						<table class="w3-light-grey" align="right" style="margin-left: 900px; margin-right: -30px; border-collapse: collapse; width: 30%">
+								<tr>
+									<th style="border: 1px solid #ddd; padding: 8px; text-align: left;"><font size="4" color="#750a30">Subtotal:</font></th>
+									<th style="border: 1px solid #ddd; padding: 8px; text-align: left;"><font size="4" color="#750a30">$100</font></th>
+								</tr>
+								<tr>
+									<td style="border: 1px solid #ddd; padding: 8px;"><font size="4" color="#750a30"> + HST:</font></td>
+									<td style="border: 1px solid #ddd; padding: 8px;"><font size="4" color="#750a30">$0</font></td>
+								</tr>
+								<tr>
+									<td style="border: 1px solid #ddd; padding: 8px;"><font size="4" color="#750a30"><b>Total:</b></font></td>
+									<td style="border: 1px solid #ddd; padding: 8px;"><font size="4" color="#750a30"><b>$0</b></font></td>
+								</tr>
+							
+						</table>
+					</td>
 
-					<tr>
-						<td><br>
-						<label for="password" style="margin-right: 130px"
-							class="w3-medium w3-text-red"><br>
-							<font size="4" color="#e8e0d9"><b>Password : </b></font></br></label> <input
-							name="password" id="password" type="text" value=""
-							placeholder="Enter your password"></input></br></td>
-					</tr>
 
+					<!-- Contact -->
+					<div class="w3-container" id="contact" style="margin-top: 75px">
+						<h1 class="w3-xxxlarge w3-text-red">
+							<font color="#313551"><b>Can't find your book?</b></font>
+						</h1>
+						<hr style="width: 50px; border: 5px solid red" class="w3-round"></hr>
+						<p>
+							<font color="#750a30"><b>Please let us know to order
+									more! Our team is available 24/7 for your York University
+									needs.</b></font>
+						</p>
+						<form action="/action_page.php" target="_blank">
+							<div class="w3-section">
+								<font color="#750a30"> <label>Name</label> <input
+									class="w3-input w3-border" type="text" name="Name"></input></font>
+							</div>
+							<div class="w3-section">
+								<font color="#750a30"> <label>Email</label> <input
+									class="w3-input w3-border" type="text" name="Email"></input></font>
+							</div>
+							<div class="w3-section">
+								<font color="#750a30"> <label>Message</label> <input
+									class="w3-input w3-border" type="text" name="Message"></input></font>
+							</div>
+							<button type="submit"
+								class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">Send
+								Message</button>
+						</form>
 
-					<tr>
-						<td><br>
-						<button action='Submit' name='signIn' label='signIn'
-								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-								<font color="#701e6e"></font>Sign In
-							</button> </br></td>
-					</tr>
-
-					<tr>
-						<td><br>
-						<button action='Submit' name='forgotPassword'
-								label='forgotPassword' style="margin-top: 10px"
-								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-								<font color="#701e6e"> Forgot your password?</font>
-							</button> </br></td>
-					</tr>
-				</div>
-			</div>
-
-			<div class="w3-main" style="margin-left: 340px; margin-right: 100px">
-				<div class="w3-container" style="margin-top: 80px; color: Red;"
-					id="showcase">
-					<h1 class="w3-xxxlarge w3-text-blue"
-						style="display: inline; margin-right: 10px; color: Red">
-						<font size="10" color="#313551"><b>SIGN UP</b></font>
-
-					</h1>
-				</div>
-			</div>
-			<div class="w3-main" style="margin-left: 300px; margin-right: 100px">
-
-				<div class="w3-container" style="margin-top: 0px; color: Red;"
-					id="showcase">
-					<h1 class="w3-container">
-						<font size="6" color="#750a30"><b>Not a member yet?
-								Sign up now!</b></font>
-					</h1>
-					<!-- Get the first name, last name, email address, address, phone -->
-					<tr>
-						<td><label for="loginFirstName"
-							style="display: inline; margin-right: 5000px"
-							class="w3-medium w3-text-red"><font size="4"
-								color="#e8e0d9"><b>Your first name </b></font></label> <input
-							name="loginFirstName" id="loginFirstName" type="text" value=""
-							placeholder="Eg: Jane"> </input></td>
-					</tr>
-
-					<tr>
-						<td><label for="loginLastName" style="margin-right: 5000px"
-							class="w3-medium w3-text-red"><font size="4"
-								color="#e8e0d9"><br>
-								<b>Your last name</b></br></font></label> <input name="loginLastName"
-							id="loginLastName" type="text" value="" placeholder="Eg: Doe">
-						</input></td>
-					</tr>
-
-					<tr>
-						<td><label for="userPassword" style="margin-right: 5000px"
-							class="w3-medium w3-text-red"><font size="4"
-								color="#e8e0d9"><b>Password</b></font></label> <input
-							name="userPassword" id="userPassword" type="text" value="">
-						</input></td>
-					</tr>
-
-					<tr>
-						<td><br>
-						<button action='Submit' name='createAccount' label='createAccount'
-								style="margin-top: 30px"
-								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-								<font color="#701e6e"></font> Create your account
-							</button> </br></td>
-					</tr>
+					</div>
 
 				</div>
+
 			</div>
+
 		</table>
 	</form>
 
