--- a/WebContent/Review.jspx
+++ b/WebContent/Review.jspx
@@ -1,17 +1,60 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
-	<jsp:directive.page contentType="text/html; charset=UTF-8" 
-		pageEncoding="UTF-8" session="false"/>
+	<jsp:directive.page contentType="text/html; charset=UTF-8"
+		pageEncoding="UTF-8" session="false" />
 	<jsp:output doctype-root-element="html"
 		doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
 		doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
 		omit-xml-declaration="true" />
-<html xmlns="http://www.w3.org/1999/xhtml">
+	<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<link rel="StyleSheet" href="res/test.html" type="text/css"
+	title="cse4413" media="screen, print" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Poppins" />
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <title>Review Page</title>
-</head>
-<body>
 
-</body>
-</html>
+
+</head>
+<body background="res/Images/Books.jpg">
+<c:if test="${notEmpty ne null}">
+	<h3>
+		Reviews
+	</h3>
+	<div>
+		<table id="reviews">
+		<tr>
+		    <th>User Name</th>
+		    <th>Rating (/5)</th>
+		    <th>Review</th>
+		    <th>Date reviewed</th>
+  		</tr>
+		<c:forEach items="${reviews}" var="review">
+		
+			<tr>
+				<td>${review.username}</td>
+				<td>${review.rating}</td>
+				<td>${review.reviewText}</td>
+				<td>${review.reviewDate}</td>	
+			</tr>
+		</c:forEach>
+		</table>
+	</div>
+	</c:if>
+	
+	<c:if test="${notEmpty eq null}">
+	<h3>
+		Reviews
+		
+	</h3>
+	<h5>
+		This book has no reviews yet. Be the first one to review this book by purchasing it from the store.
+	</h5>
+	</c:if>
+</jsp:root>
+	</body>
+	</html>
 </jsp:root>
