updated browse.  Still not working properly.

--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -62,13 +62,13 @@
 							<tr>
 								<td colspan="2"><div id="allBooks"
 										onclick="searchBook('Start');return false;">All Books</div>
-									<div id="EECS1" onclick="loadByCategory1('Start');return false">1st
+									<div id="EECS1" onclick="loadByCategory('Start', 'category1');return false">1st
 										Year EECS Books</div>
-									<div id="EECS2" onclick="loadByCategory2('Start');return false">2nd
+									<div id="EECS2" onclick="loadByCategory('Start', 'category2');return false">2nd
 										Year EECS Books</div>
-									<div id="EECS3" onclick="loadByCategory3('Start');return false">3rd
+									<div id="EECS3" onclick="loadByCategory('Start', 'category3');return false">3rd
 										Year EECS Books</div>
-									<div id="EECS4" onclick="loadByCategory4('Start');return false">4th
+									<div id="EECS4" onclick="loadByCategory('Start', 'category4');return false">4th
 										Year EECS Books</div>
 								</td>
 							</tr>
