fixed button to pay now and message for continue shopping

--- a/WebContent/Payment.jspx
+++ b/WebContent/Payment.jspx
@@ -31,15 +31,22 @@
 			<div class="w3-container">
 				<h3 class="w3-padding-64"></h3>
 			</div>
-					<div class="w3-bar-block">
-							<a href="Start?currPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-							<a href="Start?currPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-							<a href="Start?currPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-							<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-					</div>
+			<div class="w3-bar-block">
+				<a href="Start?currPage=home" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Home</a> <a
+					href="Start?currPage=categories" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
+					href="Start?currPage=cart" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Cart</a> <a
+					href="Start?currPage=team" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a
+					href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Account Management</a>
+				<a href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Membership</a> <a
+					href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Contact</a>
+			</div>
 		</nav>
 		<table>
 
@@ -95,7 +102,7 @@
 					<td>
 						<button action='Submit' name='home' label='home'
 							class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-							<font color="#701e6e"></font>Go Back to HomePage
+							<font color="#701e6e"></font><b>Continue Shopping</b>
 						</button>
 
 						<table class="w3-light-grey" align="right"
@@ -103,7 +110,8 @@
 							<tr>
 								<th
 									style="border: 1px solid #ddd; padding: 8px; text-align: left;"><font
-									size="6" color="#750a30">Payment Details: Total = ${total }</font></th>
+									size="6" color="#750a30">Payment Details: Total =
+										${total }</font></th>
 							</tr>
 							<tr>
 								<td style="border: 1px solid #ddd; padding: 8px;"><font
@@ -135,48 +143,50 @@
 										placeholder="CVC"></input></font></td>
 
 							</tr>
-							
+
 							<tr>
-							    <td class="w3-section" id="expiration-date" style="border: 1px solid #ddd; padding: 8px;"><font size="4" color="#750a30">
-                <label><b>Expiration Date:</b></label></font><br/>
-                <select style="border: 1px solid #ddd; padding: 8px; width: 50%">
-                    <option value="01">January</option>
-                    <option value="02">February </option>
-                    <option value="03">March</option>
-                    <option value="04">April</option>
-                    <option value="05">May</option>
-                    <option value="06">June</option>
-                    <option value="07">July</option>
-                    <option value="08">August</option>
-                    <option value="09">September</option>
-                    <option value="10">October</option>
-                    <option value="11">November</option>
-                    <option value="12">December</option>
-                </select>
-                <select style="border: 1px solid #ddd; padding: 8px; width: 50%">
-                    <option value="16"> 2016</option>
-                    <option value="17"> 2017</option>
-                    <option value="18"> 2018</option>
-                    <option value="19"> 2019</option>
-                    <option value="20"> 2020</option>
-                    <option value="21"> 2021</option>
-                    <option value="22"> 2022</option>
-                </select>
-            </td>
-							
-			</tr>
-							
+								<td class="w3-section" id="expiration-date"
+									style="border: 1px solid #ddd; padding: 8px;"><font
+									size="4" color="#750a30"> <label><b>Expiration
+												Date:</b></label></font><br /> <select
+									style="border: 1px solid #ddd; padding: 8px; width: 50%">
+										<option value="01">January</option>
+										<option value="02">February</option>
+										<option value="03">March</option>
+										<option value="04">April</option>
+										<option value="05">May</option>
+										<option value="06">June</option>
+										<option value="07">July</option>
+										<option value="08">August</option>
+										<option value="09">September</option>
+										<option value="10">October</option>
+										<option value="11">November</option>
+										<option value="12">December</option>
+								</select> <select
+									style="border: 1px solid #ddd; padding: 8px; width: 50%">
+										<option value="16">2016</option>
+										<option value="17">2017</option>
+										<option value="18">2018</option>
+										<option value="19">2019</option>
+										<option value="20">2020</option>
+										<option value="21">2021</option>
+										<option value="22">2022</option>
+								</select></td>
+
+							</tr>
+							<tr>
+								<td style="border: 1px solid #ddd; padding: 8px;" colspan="2"><font
+									size="4" color="#750a30"><button type="submit"
+											class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom">
+											<b>Pay Now</b>
+										</button></font></td>
+							</tr>
 
 
 
 						</table>
-					<td align="right"><button type="submit"
-							class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom"
-							style="margin-left: 836px; margin-right: 300px; width: 30%">
-							<b>Pay Now</b>
-						</button></td>
-					</td>
 
+					</td>
 
 
 
