--- a/WebContent/Payment.jspx
+++ b/WebContent/Payment.jspx
@@ -102,7 +102,7 @@
 					<td>
 						<button action='Submit' name='home' label='home'
 							class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-							<font color="#701e6e"></font><b>Continue Shopping</b>
+							<font color="#701e6e"></font><a href="Start?currPage=home"><b>Continue Shopping</b></a>
 						</button>
 
 						<table class="w3-light-grey" align="right"
