Review Page is updated with navigation

--- a/WebContent/Browse.jspx
+++ b/WebContent/Browse.jspx
@@ -16,7 +16,7 @@
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/css?family=Poppins" />
 
-<title>Welcome to Mom and Pop's Bookstore</title>
+<title>Swag EECS Bookstore</title>
 <script type="text/javascript" src="./res/browse.js">
 	;
 </script>
