--- a/WebContent/Review.jspx
+++ b/WebContent/Review.jspx
@@ -16,9 +16,38 @@
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 <title>Review Page</title>
+<style>
+body {
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
 
+.topnav {
+	overflow: hidden;
+	background-color: #333;
+}
 
+.topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a.active {
+	background-color: #4CAF50;
+	color: white;
+}
+</style>
 </head>
+
 <body background="res/Images/Books.jpg">
 	<form action='Start' method="GET">
 		<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding"
@@ -29,18 +58,25 @@
 			<div class="w3-container">
 				<h3 class="w3-padding-64"></h3>
 			</div>
-					<div class="w3-bar-block">
-							<a href="Start?currPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-							<a href="Start?currPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-							<a href="Start?currPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-							<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-					</div>
+			<div class="w3-bar-block">
+				<a href="Start?currPage=home" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Home</a> <a
+					href="Start?currPage=categories" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
+					href="Start?currPage=cart" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Cart</a> <a
+					href="Start?currPage=team" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Our Team</a> <a
+					href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Account Management</a>
+				<a href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Membership</a> <a
+					href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Contact</a>
+			</div>
 		</nav>
 		<table>
-
+			
 			<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
 
 				<!-- Header -->
@@ -50,11 +86,18 @@
 						<b>Swag EECS Bookstore</b>
 					</h1>
 				</div>
-
+				
+				<div class="topnav" style="margin-left: 340px; margin-right: 100px">
+				<a class="active" href="#home">EECS - First Year</a> 
+				<a href="#news">EECS - Second Year</a> 
+				<a href="#contact">EECS - Third Year</a> 
+				<a href="#about">EECS - Fourth Year</a>
+			   </div>
+			   
 				<form name='browseForm' action="Start" method="POST"
 					onsubmit="return validate();">
 					<table style="width: 100%">
-						
+
 						<tr align="right">
 							<td><input type='text' style="margin-right: 10px"
 								name='browse' placeholder='Browse Books'></input>
@@ -82,7 +125,7 @@
 
 				</div>
 			</div>
-			
+
 			<div class="w3-main" style="margin-left: 300px; margin-right: 100px">
 				<div class="w3-container" style="margin-top: 0px; color: Red;"
 					id="showcase">
@@ -94,7 +137,7 @@
 						<td><label for="bookID" style="margin-right: 100px"
 							class="w3-medium w3-text-red"><br>
 							<font size="4" color="#e8e0d9"><b>Book ID: </b></font></br></label></td>
-							<td>$${bid}</td> 
+						<td>$${bid}</td>
 					</tr>
 
 					<tr>
@@ -112,47 +155,53 @@
 							<font size="4" color="#e8e0d9"><b>User ID </b></font></br></label></br></td>
 						<td>$${uid}</td>
 					</tr>
-					
+
 					<tr>
 						<td><br>
 						<label for="reviewUsers" style="margin-right: 130px"
 							class="w3-medium w3-text-red"><br>
-							<font size="4" color="#e8e0d9"><b>Review Written by other readers </b></font></br></label></br></td>
+							<font size="4" color="#e8e0d9"><b>Review Written by
+										other readers </b></font></br></label></br></td>
 						<td>$${review}</td>
 					</tr>
-					
+
 					<tr>
 						<td><label for="rating" style="margin-right: 100px"
 							class="w3-medium w3-text-red"><br>
 							<font size="4" color="#e8e0d9"><b>Rate this book: </b></font></br></label></td>
-						<td><input type="radio" id="rate1" name="rate1" value="rate1" style="margin: 0 10px 0 10px;"><label
-							for="rate1">1</label> </input></td>
-						
-						<td><input type="radio" id="rate2" name="rate2" value="rate2" style="margin: 0 10px 0 10px;"><label
-							for="rate2">2</label> </input></td>
+						<td><input type="radio" id="rate1" name="rate1" value="rate1"
+							style="margin: 0 10px 0 10px;"><label for="rate1">1</label>
+							</input></td>
 
-						<td><input type="radio" id="rate3" name="rate3" value="rate3" style="margin: 0 10px 0 10px;"><label
-							for="rate3">3</label> </input></td>
+						<td><input type="radio" id="rate2" name="rate2" value="rate2"
+							style="margin: 0 10px 0 10px;"><label for="rate2">2</label>
+							</input></td>
 
-						<td><input type="radio" id="rate4" name="rate4" value="rate4" style="margin: 0 10px 0 10px;"><label
-							for="rate4">4</label> </input></td>
+						<td><input type="radio" id="rate3" name="rate3" value="rate3"
+							style="margin: 0 10px 0 10px;"><label for="rate3">3</label>
+							</input></td>
+
+						<td><input type="radio" id="rate4" name="rate4" value="rate4"
+							style="margin: 0 10px 0 10px;"><label for="rate4">4</label>
+							</input></td>
 					</tr>
-					
+
 					<tr>
 						<td><br>
-						<button action='Submit' name='rateSubmit' label='rateSubmit' style="margin-top: 30px"
+						<button action='Submit' name='rateSubmit' label='rateSubmit'
+								style="margin-top: 30px"
 								class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
 								<font color="#701e6e"></font>Submit
 							</button> </br></td>
 					</tr>
 
-					
+
 
 				</div>
 			</div>
 		</table>
 	</form>
-<footer>
+	<footer>
 		<table>
 			<div class="w3-container"
 				style="margin-top: 100px; margin-right: 1000px; color: red;"
@@ -168,8 +217,32 @@
 
 		</table>
 	</footer>
-	
 </body>
+
+<script>
+	function buttonIsPressed() {
+		var ok = false;
+
+		if (document.getElementById('rate5').checked) {
+			ok = true;
+		} else if (document.getElementById('rate4').checked) {
+			ok = true;
+		} else if (document.getElementById('rate3').checked) {
+			ok = true;
+		} else if (document.getElementById('rate2').checked) {
+			ok = true;
+		} else if (document.getElementById('rate1').checked) {
+			ok = true;
+		}
+
+		if (!ok) {
+			alert("Please give this book a rating")
+			ok = false;
+		}
+
+		return ok;
+	}
+</script>
 
 	</html>
 </jsp:root>
